[package]
name = "meshgen"
version = "0.1.0"
authors = ["Ashley Wulber <ashtronaut@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "meshgen"
crate-types = ["rlib", "dylib", "bin"]

[[bin]]
name = "meshgenbin"
path = "src/bin.rs"

[dependencies]
rayon = "1.5"
half = "1.6"
noise = "0.6"
more-asserts = "0.2.1"
