[package]
name = "meshgen"
version = "0.2.0"
authors = ["Ashley Wulber <ashtronaut@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "meshgen"
crate-type = ["dylib"]


[dependencies]
rayon = "1.5"
half = "1.6"
noise = "0.6.0"
more-asserts = "0.2.1"
libc = "0.2.80"
[dependencies.rand]
version = "0.7"
features = ["small_rng"]
